--- a/styles/basic.css
+++ b/styles/basic.css
@@ -1,4 +1,24 @@
-p {color: #ba4;}
+
+
+body {
+    font-size: 1.3em;
+    
+    }
+
+p {
+    font-size: 0.9em;
+    color: #ba4;
+    
+    width: 500px;
+}
+a {
+    text-decoration: none;
+}
+
+h1 {
+    font-family: "Caesar Dressing", "arial", sans-serif;
+    font-size: 1.25em;
+}
 
 a:link    { color: black; }
 a:visited { color: yellow; }
